--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <ul class="nav navbar-nav navbar-nav-right">
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#body">Головна</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#about">Про нас</a></li>
-                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#donation">Зробити пожертву</a></li>
+                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#donation">Консалтинг</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#contact">Приєднуйся до нас</a></li>
                             </ul>
                         </div>
@@ -54,7 +54,7 @@
                     <div class="col-md-6 sm-margin-b-60">
                         <div class="margin-b-30">
                             <h1 class="promo-block-title">Зміни починаються <br> з вас</h1>
-                            <p class="promo-block-text">Зробіть різницю у вашій спільноті сьогодні</p>
+                            <p class="promo-block-text">Громадська Об'єднання</p>
                         </div>
                         <!-- <ul class="list-inline">
                             <li><a href="#" class="social-icons"><i class="icon-social-facebook"></i></a></li>
@@ -66,7 +66,7 @@
                     </div>
                     <div class="col-md-6 promo-col">
                         <div class="promo-block-img-wrap">
-                            <img class="promo-block-img img-responsive" src="img/common/1.png">
+                            <img class="promo-block-img img-responsive" src="img/common/1.png" alt="People">
                         </div>
                     </div>
                 </div>
@@ -84,61 +84,71 @@
                             </div>
                     </div>
                     <div class="col-sm-6">
-                        <img class="about-img full-width img-responsive" src="img/common/2.jpg" alt="People">
+                        <img class="about-img full-width img-responsive" src="img/common/3.png" alt="People">
                     </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="contact" class="contact bg-color-sky-light">
+            <div class="container content-lg">
+                <div class="col-sm-6">
+                    <h2>Приєднуйся до нас</h2>
+                    <p class="contact-text">Сприяння інтеграції інвалідів у суспільство. Вивчення та використання досвіду закордонних держав щодо соціального та юридичного захисту інвалідів.         
+                        Розвиток фізичної культури і спорту,масового та параолімпійському спорту,фізкультурно-спортивна реабілітація осіб з інвалідністю.</p>
+                </div>
+                <div class="col-sm-6">
+                    <img class="about-img full-width img-responsive" src="img/common/4.jpg" alt="People">
                 </div>
             </div>
         </div>
         
-        <div id="donation" class="donation bg-color-sky-light">
+        <div id="donation" class="donation">
             <div class="container content-lg">
-                <div class="row margin-b-40">
+                <div class="row">
                     <div class="col-sm-6">
-                        <h2>Зробити пожертву</h2>
-                        <p>Координація зусиль осіб з інвалідністю у справі ефективного використання наявних можливостей та залучення досвіду закордонних держав, співпраця з міжнародними фондами.Пошук інвесторів та донорів,створення та супровід бізнес-ідей для інвалідів з урахуванням їх можливостей.Це надає людині повноцінне життя у суспільстві та е мотивацією для інших.</p>
-                        <img class="requisites-img img-responsive" src="img/common/3.png" alt="People">
+                        <h2>Консалтинг</h2>
+                        <p class="donation-text">Координація зусиль осіб з інвалідністю у справі ефективного використання наявних можливостей та залучення досвіду закордонних держав, співпраця з міжнародними фондами.Пошук інвесторів та донорів,створення та супровід бізнес-ідей для інвалідів з урахуванням їх можливостей.Це надає людині повноцінне життя у суспільстві та е мотивацією для інших.</p>
+                        <img class="requisites-img img-responsive" src="img/common/2.jpg" alt="People">
                     </div>
-                    <div class="col-sm-6 requisites">
-                        <h2>Реквізити</h2>
+                    <!-- <div class="col-sm-6 requisites">
+                        <h2>Зробити пожертву</h2>
                         <p>ЄДРПОУ: 44798341</p>
                         <p>Гривня, Євро, Долар, Норвезька крона:</p>
                         <p class="requisites-numbers">№UA943226690000026002300289179</p>
+                    </div> -->
+                    <div class="col-sm-6 contact-block">
+                            <div class="div">
+                                <h4>Зробити пожертву</h4>
+                                <ul>
+                                    <li><p>ЄДРПОУ:</p> <p>44798341</p></li>
+                                    <li><p>Гривня:</p> <p class="requisites-numbers">№UA943226690000026002300289179</p></li>
+                                    <li><p>Євро:</p> <p class="requisites-numbers">№UA943226690000026002300289179</p></li>
+                                    <li><p>Долар:</p> <p class="requisites-numbers">№UA943226690000026002300289179</p></li>
+                                    <li><p>Норв. крона:</p> <p class="requisites-numbers">№UA943226690000026002300289179</p></li>
+                                </ul>
+                            </div>
+                            <div class="div">
+                                <h4>Місцезнаходження</h4>
+                                <a href="#">Київ, Україна</a>
+                                <p>вул. Сосніних Сім`ї, буд. 9</p>
+                            </div>
+                            <div class="div">
+                                <h4>Часи роботи</h4>
+                                <p>10:00-18:00</p>
+                                <p>Пн.-Пт.</p>
+                            </div>
+                            <div class="div">
+                                <h4>Телефон</h4>
+                                <a href="tel:+380954407588">+380 (95) 440-75-88</a><br>
+                                <a href="tel:+380977000974">+380 (97) 700-09-74</a>
+                            </div>
+                            <div class="div">
+                                <h4>Пошта</h4>
+                                <a href="mailto:cloverua2022@gmail.com">cloverua2022@gmail.com</a>
+                            </div>
                         </div>
                 </div>
-            </div>
-        </div>
-            
-        <div id="contact" class="contact">
-            <div class="container content-lg">
-                <div class="margin-b-40">
-                    <div class="col">
-                        <h2>Приєднуйся до нас</h2>
-                        <p>Сприяння інтеграції інвалідів у суспільство. Вивчення та використання досвіду закордонних держав щодо соціального та юридичного захисту інвалідів.         
-                            Розвиток фізичної культури і спорту,масового та параолімпійському спорту,фізкультурно-спортивна реабілітація осіб з інвалідністю.</p>
-                    </div>
-                </div>
-
-                <div class="contact-block">
-                        <div class="div">
-                            <h4>Місцезнаходження</h4>
-                            <a href="#">Київ, Україна</a>
-                            <p>вул. Сосніних Сім`ї, буд. 9</p>
-                        </div>
-                        <div class="div">
-                            <h4>Часи роботи</h4>
-                            <p>10:00-18:00</p>
-                            <p>Пн.-Пт.</p>
-                        </div>
-                        <div class="div">
-                            <h4>Телефон</h4>
-                            <a href="tel:+380954407588">+380 (95) 440-75-88</a><br>
-                            <a href="tel:+380977000974">+380 (97) 700-09-74</a>
-                        </div>
-                        <div class="div">
-                            <h4>Пошта</h4>
-                            <a href="mailto:cloverua2022@gmail.com">cloverua2022@gmail.com</a>
-                        </div>
-                    </div>
             </div>
         </div>
         <footer class="footer bg-color-sky-light">
@@ -154,19 +164,14 @@
             </div>
         </footer>
 
-        <a href="javascript:void(0);" class="js-back-to-top back-to-top">Вгору</a>
-
         <script src="vendor/jquery.min.js" type="text/javascript"></script>
         <script src="vendor/jquery-migrate.min.js" type="text/javascript"></script>
         <script src="vendor/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 
         <script src="vendor/jquery.easing.js" type="text/javascript"></script>
-        <script src="vendor/jquery.back-to-top.js" type="text/javascript"></script>
-        <script src="vendor/jquery.wow.min.js" type="text/javascript"></script>
         <script src="vendor/jquery.parallax.min.js" type="text/javascript"></script>
         <script src="vendor/jquery.appear.js" type="text/javascript"></script>
         <script src="js/layout.js" type="text/javascript"></script>
-        <script src="js/components/wow.min.js" type="text/javascript"></script>
 
     </body>
 </html>
