--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                     <li><p>Гривня:</p> <p class="requisites-numbers">№UA943226690000026002300289179</p></li>
                                     <li><p>Євро:</p> <p class="requisites-numbers">№UA943226690000026002300289179</p></li>
                                     <li><p>Долар:</p> <p class="requisites-numbers">№UA943226690000026002300289179</p></li>
-                                    <li><p>Норв. крона:</p> <p class="requisites-numbers">№UA943226690000026002300289179</p></li>
+                                    <li><p>Нор. крона:</p> <p class="requisites-numbers">№UA943226690000026002300289179</p></li>
                                 </ul>
                             </div>
                             <div class="div">
