--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             </div>
                             <div class="div">
                                 <h4>Місцезнаходження</h4>
-                                <a href="#">Київ, Україна</a>
+                                <a href="#">Київ, Україна, ГО "КЛЕВЕР"</a>
                                 <p>вул. Сосніних Сім`ї, буд. 9</p>
                             </div>
                             <div class="div">
