--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="col-md-6 sm-margin-b-60">
                         <div class="margin-b-30">
                             <h1 class="promo-block-title">Зміни починаються <br> з вас</h1>
-                            <p class="promo-block-text">Громадська Об'єднання</p>
+                            <p class="promo-block-text">Громадська Організація</p>
                         </div>
                         <!-- <ul class="list-inline">
                             <li><a href="#" class="social-icons"><i class="icon-social-facebook"></i></a></li>
